# AnglerExperience

./: .gitignore  README.md
assets/: .gitignore  LandscapeBasis.blend
code/: CMakeLists.txt  jsify_shaders.py
code/gameassets/: FixSegments.py  angbody.mat  angeye.mat  angteeth.mat  seafloor.mat  simple-phong.mat
code/gameassets/minnow/: Minnnow_ioexperment_000018.mtl
code/libs/: placeholder.txt
code/libs/TinyObj/: CMakeLists.txt
code/libs/glad/src/: CMakeLists.txt
code/shaders/: FXAA.fs  blinn-phong.frag  blinn-phong.vert  blinn-phong.vs  deferred-export.fs  deferred-export.vs  deferred-pointLight.fs  deferred-pointLight.vs  deferred-shadow.vs  deferred-sunLight.fs  deferred-sunLight.vs  deferred-uber.fs  deferred-uber.vs  passthru.fs  passthru.vs  seafloor-deform.vs  zoom.fs
code/shaders/bloom/: brightFilter.frag  bright_filter.frag  combine.frag  horizontalBlur.frag  pass.vert  verticalBlur.frag
code/shaders/bloomShaders/: horizontal_blur.frag  vertical_blur.frag
code/shaders/depthOfField/: circularBlur.frag  depthOfFieldCombine.frag  horizontalBlur.frag  verticalBlur.frag
code/src/: AnimationSystem.cpp  AnimationSystem.hpp  AntennaGenerator.cpp  AntennaGenerator.hpp  Camera.cpp  Camera.h  Component.hpp  Entity.hpp  GameState.hpp  GameplaySystem.cpp  GameplaySystem.cpp.orig  GameplaySystem.hpp  MouseProcessing.cpp  MouseProcessing.hpp  PostProcessor.cpp  PostProcessor.h  RenderSystem.cpp  RenderSystem.hpp  Scene.hpp  SwarmSystem.cpp  SwarmSystem.hpp  core.h  main.cpp  main.cpp.orig
code/src/components/: AnimationComponents.hpp  Camera.cpp  Camera.h  Geometry.cpp  Geometry.hpp  LightingComponents.hpp  Lights.h  Material.cpp  Material.hpp  SimpleComponents.hpp  Spawner.cpp  Spawner.h
code/src/utility/: AntennaGenerator.cpp  AntennaGenerator.hpp  CMakeLists.txt  FontLibrary.hpp  GLSL.cpp  GLSL.h  MatrixStack.cpp  MatrixStack.h  Physics.cpp  Physics.h  Program.cpp  Program.h  ShaderLibrary.cpp  ShaderLibrary.hpp  Texture.cpp  Texture.h  Timeline.cpp  Timeline.hpp  common.h  glee.h
code/src/utility/2dText/: CMakeLists.txt  text2D.cpp  text2D.hpp  texture.cpp
